github login setup

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,7 +12,8 @@
     <h1>Login</h1>
 
     <div>
-      With GitHub: <a href="/oauth2/authorization/github">click here</a>
+      With GitHub: <a href="/oauth2/authorization/github">click here</a>. <br />
+      The name is John
     </div>
   </body>
 </html>
