--- a/src/main/resources/templates/inbox-page.html
+++ b/src/main/resources/templates/inbox-page.html
@@ -15,12 +15,72 @@
       crossorigin="anonymous"
       defer
     ></script>
+    <style>
+      .container {
+        display: grid;
+
+        grid-template-areas:
+          "header header header"
+          "nav content content"
+          "footer footer footer";
+
+        grid-template-columns: 200px 1fr 200px;
+        grid-template-rows: auto 1fr auto;
+        grid-gap: 10px;
+
+        height: 100vh;
+      }
+      header {
+        grid-area: header;
+      }
+
+      nav {
+        grid-area: nav;
+        margin-left: 0.5rem;
+      }
+
+      main {
+        grid-area: content;
+      }
+
+      aside {
+        grid-area: side;
+        margin-right: 0.5rem;
+      }
+
+      footer {
+        grid-area: footer;
+      }
+    </style>
     <title>Inbox</title>
   </head>
   <body>
-    <h1>Inbox</h1>
-    <div th:each="folder : ${userFolders}">
-      <p th:text="${folder.label}"></p>
+    <div class="container">
+      <header>
+        <!-- Header content -->
+        <h4>My head</h4>
+      </header>
+
+      <nav>
+        <ul class="list-group">
+          <li
+            th:each="folder : ${userFolders}"
+            class="list-group-item d-flex justify-content-between align-items-center"
+          >
+            <span th:text="${folder.label}">Label</span>
+            <span class="badge bg-primary rounded-pill">14</span>
+          </li>
+        </ul>
+      </nav>
+
+      <main>
+        <!-- Main content -->
+        <p>Email content</p>
+      </main>
+
+      <footer>
+        <!-- Footer content -->
+      </footer>
     </div>
   </body>
 </html>
