--- a/src/main/resources/templates/inbox-page.html
+++ b/src/main/resources/templates/inbox-page.html
@@ -64,6 +64,13 @@
       <nav>
         <ul class="list-group">
           <li
+            th:each="folder : ${defaultFolders}"
+            class="list-group-item d-flex justify-content-between align-items-center"
+          >
+            <span th:text="${folder.label}">Label</span>
+            <span class="badge bg-primary rounded-pill">14</span>
+          </li>
+          <li
             th:each="folder : ${userFolders}"
             class="list-group-item d-flex justify-content-between align-items-center"
           >
@@ -75,6 +82,7 @@
 
       <main>
         <!-- Main content -->
+        <div th:text="${defaulFolders}"></div>
         <p>Email content</p>
       </main>
 
