--- a/src/main/resources/templates/inbox-page.html
+++ b/src/main/resources/templates/inbox-page.html
@@ -62,6 +62,10 @@
       </header>
 
       <nav>
+        <div class="card">
+          <a href="/compose" class="btn btn-primary">Compose</a>
+        </div>
+
         <ul class="list-group">
           <li
             th:each="folder : ${defaultFolders}"
