--- a/src/main/resources/templates/compose-page.html
+++ b/src/main/resources/templates/compose-page.html
@@ -87,7 +87,12 @@
       <main>
         <div class="card">
           <div class="card-header">Compose Email</div>
-          <form class="p-3">
+          <form th:attr="action=@{/sendEmail}" method="post" class="p-3">
+            <input
+              type="hidden"
+              th:name="${_csrf.parameterName}"
+              th:value="${_csrf.token}"
+            />
             <div class="mb-3">
               <label for="toIds" class="form-label">To</label>
               <input
