--- a/src/main/resources/templates/compose-page.html
+++ b/src/main/resources/templates/compose-page.html
@@ -69,7 +69,10 @@
           >
             <a th:href="@{'/?folder=' + ${folder.label}}">
               <span th:text="${folder.label}">Label</span>
-              <span class="badge bg-primary rounded-pill">14</span>
+              <span
+                th:text="${stats.get(folder.label)}"
+                class="badge bg-primary rounded-pill"
+              ></span>
             </a>
           </li>
           <li
@@ -78,7 +81,10 @@
           >
             <a th:href="@{'/?folder=' + ${folder.label}}">
               <span th:text="${folder.label}">Label</span>
-              <span class="badge bg-primary rounded-pill">14</span>
+              <span
+                th:text="${stats.get(folder.label)}"
+                class="badge bg-primary rounded-pill"
+              ></span>
             </a>
           </li>
         </ul>
