--- a/src/main/resources/templates/inbox-page.html
+++ b/src/main/resources/templates/inbox-page.html
@@ -73,7 +73,10 @@
           >
             <a th:href="@{'/?folder=' + ${folder.label}}">
               <span th:text="${folder.label}">Label</span>
-              <span class="badge bg-primary rounded-pill">14</span>
+              <span
+                th:text="${stats.get(folder.label)}"
+                class="badge bg-primary rounded-pill"
+              ></span>
             </a>
           </li>
           <li
@@ -82,7 +85,10 @@
           >
             <a th:href="@{'/?folder=' + ${folder.label}}">
               <span th:text="${folder.label}">Label</span>
-              <span class="badge bg-primary rounded-pill">14</span>
+              <span
+                th:text="${stats.get(folder.label)}"
+                class="badge bg-primary rounded-pill"
+              ></span>
             </a>
           </li>
         </ul>
