--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,13 +7,35 @@
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width" />
     <base href="/" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+      crossorigin="anonymous"
+      defer
+    ></script>
   </head>
   <body>
-    <h1>Login</h1>
+    <div class="container pt-5">
+      <div class="d-flex width-full justify-content-center">
+        <h1>Login</h1>
+      </div>
 
-    <div>
-      With GitHub: <a href="/oauth2/authorization/github">click here</a>. <br />
-      The name is John
+      <div
+        class="d-flex column flex-column align-items-center justify-content-center"
+      >
+        <div class="font-weight-bold">With GitHub:</div>
+
+        <a class="btn btn-secondary" href="/oauth2/authorization/github"
+          >Click here</a
+        >.
+        <br />
+      </div>
     </div>
   </body>
 </html>
